fix: base service logic and dockerizations
